--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ menu:
   #- title: Sponsor
     #url:   /sponsor
 
-accent_image:          /sidebar_2.png
+accent_image:          /stem_dalle.webp
 #accent_color:          rgb(118,194,138)
 
 
