--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ menu:
   - title: Percorso
     url:   /percorso
   - title: Chi Siamo
-    url:   /organizers
+    url:   /chisiamo
   #- title: Sponsor
     #url:   /sponsor
 
