--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ menu:
   #- title: Sponsor
     #url:   /sponsor
 
-accent_image:          /stem_dalle.webp
+accent_image:          /stem_dalle_unipd.png
 #accent_color:          rgb(118,194,138)
 
 
